# AetherShell

./: README.md  install.sh  lib.md  package_all.sh
AetherDock/: AetherDock  Makefile  README.md  style.css
AetherDock/include/: drives.h  launcher.h  pager.h  search.h  trash.h  utils.h
Venom_Basilisk/: Makefile  install.sh  venom-basilisk.service  venom_basilisk
Venom_Basilisk/include/: ai_chat.h  basilisk.h  commands.h  search.h  window.h
Venom_Basilisk/src/: ai_chat.c  commands.c  main.c  search.c  window.c
auth/: Makefile  README.md  auth.c  auth_ui.c  auth_ui.h  install.sh
basilisk/: Makefile  basilisk  install.sh  project_analysis.md
basilisk/src/: commands.c
desktop/: Makefile  a.out  desktop  desktop.desktop  test_gtk.c  test_parent.c  venom-desktop-manager-asan
desktop/docs/: WIDGET_DEVELOPMENT.md
desktop/include/: desktop_config.h  filesystem.h  icons.h  menu.h  selection.h  vaxp-widget-api.h  wallpaper.h  widgets_manager.h
desktop/src/: desktop.c  desktop_config.c  filesystem.c  icons.c  main.c  menu.c  selection.c  wallpaper.c  widgets_manager.c
launcher/: .gitignore  README.md  meson.build
launcher/data/: launcher.desktop  meson.build
launcher/data/style/: launcher.css
launcher/src/: main.c
launcher/src/core/: app_entry.c  app_entry.h  desktop_reader.c  desktop_reader.h  icon_loader.c  icon_loader.h
launcher/src/ui/: app_grid.c  app_grid.h  app_icon.c  app_icon.h  launcher_window.c  launcher_window.h  search_bar.c  search_bar.h
launcher/src/utils/: string_utils.c  string_utils.h
osd-notify/: Makefile  osd-notify  osd.c
osd-notify/src/: osd.c  (+14 more)
panel/: Makefile  panel  style.css
(+94 files in other folders)
